# wgpu_automata

./: .gitignore  Cargo.toml  README.md  index.html
shaders/: continuous.wgsl  neural.wgsl  neural_render.wgsl  render.wgsl  render_continuous.wgsl  shader_tools.wgsl  totalistic.wgsl  totalistic_render.wgsl
src/: camera.rs  computer.rs  continuous.rs  double_buffer.rs  gpu_interface.rs  grayscale.wgsl  image_util.rs  lib.rs  life.rs  life.wgsl  main.rs  math.rs  render.wgsl  renderer.rs  renderstate.rs  rule.rs  shader.wgsl  simulator.rs  texture.rs  time.rs  totalistic.rs  wgsl_preproc.rs
src/app/: camera.rs  continuous.rs  gpu_interface.rs  grid_renderer.rs  image_util.rs  input.rs  mod.rs  neural.rs  renderer.rs  rule.rs  sim_renderer.rs  simulator.rs  time.rs  totalistic.rs  wgsl_preproc.rs
src/app/gpu/: bindgroup.rs  mod.rs
src/app/gui/: error_window.rs  gui_window.rs  mod.rs  neural_window.rs  number_textedit.rs
src/app/math/: mod.rs  vec.rs
src/app/simulation/: compute_textures.rs  mod.rs  neural_parameters.rs  totalistic_parameters.rs
src/gui/: gui_window.rs  mod.rs
