[package]
name = "wgpu_automata"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.26"
env_logger = "0.9"
log = "0.4"
wgpu = "0.12"
pollster = "0.2.5"
cfg-if = "1"
bytemuck = { version = "1.4", features = [ "derive" ] }
anyhow = "1.0"

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]



[lib]
crate-type = ["cdylib", "rlib"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "0.2.0"
wgpu = { version = "0.12", features = ["webgl"]}
wasm-bindgen = "0.2.76"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3.53", features = [
    "Document",
    "Window",
    "Element",
]}