[package]
name = "wgpu_automata"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.13.1"
winit = "0.26"
env_logger = "0.9"
log = "0.4"
pollster = "0.2.5"
cfg-if = "1"
bytemuck = { version = "1.4", features = [ "derive" ] }
anyhow = "1.0"
futures-intrusive = "0.4.0"
rand = "0.8.5"
regex = "1"
cgmath = "0.18"
egui_wgpu_backend = "0.18"
chrono = "0.4"
egui = "0.18"
epi = "0.17"
egui_winit_platform = "0.15"
egui_demo_lib = "0.18"

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]